[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://components/weapons/sword/sword.gd" id="1_38j0m"]
[ext_resource type="Texture2D" uid="uid://dr27plp1wfcxe" path="res://components/weapons/sword/sword.png" id="2_a6ill"]
[ext_resource type="Script" path="res://addons/c_timer/c_timer.gd" id="3_q13i6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ruwfj"]
radius = 561.001

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sl3h7"]
radius = 15.0
height = 70.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h48d2"]
bg_color = Color(0.878431, 0.32549, 0.25098, 0.45098)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0, 0, 0.317647)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Sword" type="Node2D" groups=["Weapons"]]
script = ExtResource("1_38j0m")
metadata/WeaponName = "sword"

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_ruwfj")

[node name="WeaponPivot" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="Sword" type="Sprite2D" parent="WeaponPivot"]
unique_name_in_owner = true
position = Vector2(60, 0)
texture = ExtResource("2_a6ill")

[node name="AttackPoint" type="Marker2D" parent="WeaponPivot/Sword"]
unique_name_in_owner = true
position = Vector2(30, -11)

[node name="SwordHitbox" type="Area2D" parent="WeaponPivot/Sword"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponPivot/Sword/SwordHitbox"]
unique_name_in_owner = true
position = Vector2(20, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_sl3h7")

[node name="DebugVisual" type="Panel" parent="WeaponPivot/Sword/SwordHitbox/CollisionShape2D"]
unique_name_in_owner = true
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h48d2")

[node name="CTimer" type="Node" parent="."]
script = ExtResource("3_q13i6") 